k8s/health/ingress.yaml
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: go-demo-8
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: go-demo-8.cluster.prageethw.co
    http:
      paths:
      - backend:
          serviceName: go-demo-8
          servicePort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: go-demo-8
  labels:
    app: go-demo-8
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: go-demo-8
